@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T02:00:00Z",
-  "count" : 256,
-  "count_minmax" : [ 256, 312 ],
-  "count_decinc" : [ -56, +0 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 8, 10 ],
-  "uniques_decinc" : [ -2, +0 ]
+  "timestamp" : "2022-05-20T08:29:33Z",
+  "count" : 163,
+  "count_minmax" : [ 163, 312 ],
+  "count_decinc" : [ -149, +0 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 5, 10 ],
+  "uniques_decinc" : [ -5, +0 ]
 }
