@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-05-20T08:29:33Z",
+  "count" : 120,
+  "count_minmax" : [ 120, 120 ],
+  "count_decinc" : [ -0, +120 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
