@@ -1,3 +1,10 @@
+2022-05-20T08:29:33Z:
+* notice: last 14d: unq all: 25 5142
+* notice: prev accum: outdated-unq outdated-all / unq all: 481 19265 / 576 24380
+* notice: next accum: outdated-unq outdated-all / unq all: 481 19265 / 574 24407
+* notice: prev exec diff / last date diff / accum: unq all: +1 +120 -3 -93 / +1 +120 -0 -0 / 1 120
+* notice: changed dates: [2022-05-06 2022-05-20]
+
 2022-05-20T02:00:00Z:
 * notice: last 14d: unq all: 26 5115
 * notice: prev accum: outdated-unq outdated-all / unq all: 467 18940 / 575 24074
